tests/NormalTests/paczka1/fuzzy1/65225143.err
Error in line 7: S225 S225 83,2
Error in line 6: yd9of0s537 S225 42,4
Error in line 18: S225 S609 73,6
Error in line 22: 8FyhR S225 44,4
Error in line 16: yd9of0s537 S616 7,1
Error in line 29: mOqDU4 S609 31,8
